--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "native-base": "^3.4.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
